New/force-app/main/default/objects/Todo__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Status fo todo item</description>
    <formula>IF(Date_of_completion__c -  TODAY() &gt; 1, &quot;Later&quot;, 
   IF(Date_of_completion__c -  TODAY() = 1, &quot;Tomorrow&quot;, 
      IF(Date_of_completion__c -  TODAY() = 0, &quot;Today&quot;, 
         IF(Date_of_completion__c -  TODAY() &lt; 0, &quot;Expired&quot;, null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>