New/force-app/main/default/objects/Todo__c/fields/Date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_completion__c</fullName>
    <label>Date of completion</label>
    <required>true</required>
    <type>Date</type>
</CustomField>