New/force-app/main/default/objects/Todo__c/fields/IsDone__c.field-meta.xml
<CustomField>
    <fullName>IsDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status</description>
    <label>IsDone</label>
    <type>Checkbox</type>
</CustomField>