New/force-app/main/default/objects/Todo__c/listViews/all_todo.listView-meta.xml
<ListView>
    <fullName>all_todo</fullName>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Category__c</columns>
    <columns>IsDone__c</columns>
    <columns>Date_of_completion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>all todo</label>
</ListView>